# discord-bot

./: Cargo.toml
.github/workflows/: rust-clippy.yml
src/: main.rs
